testsuite/tests/polykinds/T14110.stderr

T14110.hs:9:8: error: [GHC-12985]
    • Number of parameters must match family declaration; expected 1.
    • In the type instance declaration for ‘R_’
      In the instance declaration for ‘R Eq’
